--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,25 @@ nltk>=3.8.1
 spacy>=3.5.3
 sentence-transformers>=2.2.2
 
+# AWS Integration (pinned versions)
+boto3==1.34.69
+botocore==1.34.69
+awscli==2.15.32
+sagemaker==2.205.0
+watchtower==3.1.0
+
 # AWS Integration
-boto3>=1.26.0
-sagemaker>=2.150.0
-awscli>=1.27.0
-watchtower>=3.0.0
+# boto3==1.36.6
+# botocore==1.36.6
+# awscli==1.29.0
+# sagemaker>=2.150.0
+# watchtower>=3.0.0
+
+# boto3>=1.26.0
+# sagemaker>=2.150.0
+# awscli>=1.27.0
+# watchtower>=3.0.0
+
 
 # Data Processing
 numpy>=1.24.0
