--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,6 @@ sentence-transformers>=2.2.2
 # AWS Integration (pinned versions)
 boto3==1.34.69
 botocore==1.34.69
-awscli==2.15.32
-sagemaker==2.205.0
-watchtower==3.1.0
 
 # AWS Integration
 # boto3==1.36.6
@@ -30,9 +27,9 @@ watchtower==3.1.0
 # watchtower>=3.0.0
 
 # boto3>=1.26.0
-# sagemaker>=2.150.0
-# awscli>=1.27.0
-# watchtower>=3.0.0
+sagemaker>=2.150.0
+awscli>=1.27.0
+watchtower>=3.0.0
 
 
 # Data Processing
