--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,55 @@
 # Core ML Libraries
-torch>=2.0.0
-transformers>=4.30.0
-datasets>=2.12.0
-accelerate>=0.20.0
-bitsandbytes>=0.39.0
-scikit-learn>=1.2.2
-networkx>=3.1
+torch
+transformers
+datasets
+accelerate
+bitsandbytes
+scikit-learn
+networkx
 
 # NLP Libraries
-nltk>=3.8.1
-rouge-score>=0.1.2
-sacrebleu>=2.3.1
-nltk>=3.8.1
-spacy>=3.5.3
-sentence-transformers>=2.2.2
-
-# AWS Integration (pinned versions)
-boto3==1.34.69
-botocore==1.34.69
+nltk
+rouge-score
+sacrebleu
+spacy
+sentence-transformers
 
 # AWS Integration
-# boto3==1.36.6
-# botocore==1.36.6
-# awscli==1.29.0
-# sagemaker>=2.150.0
-# watchtower>=3.0.0
-
-# boto3>=1.26.0
-sagemaker>=2.150.0
-awscli>=1.27.0
-watchtower>=3.0.0
-
+boto3
+botocore
+sagemaker
+awscli
+watchtower
 
 # Data Processing
-numpy>=1.24.0
-pandas>=2.0.0
-pyarrow>=12.0.0
-pyyaml>=6.0
-python-dotenv>=1.0.0
+numpy
+pandas
+pyarrow
+pyyaml
+python-dotenv
 
 # Monitoring and Logging
-wandb>=0.15.0
-tensorboard>=2.13.0
-tqdm>=4.65.0
+wandb
+tensorboard
+tqdm
 
 # System Utilities
-psutil>=5.9.0
-py-cpuinfo>=9.0.0
+psutil
+py-cpuinfo
 
 # Development Tools
-black>=23.3.0
-isort>=5.12.0
-flake8>=6.0.0
-pytest>=7.3.1
-pytest-cov>=4.1.0
+black
+isort
+flake8
+pytest
+pytest-cov
 
 # Documentation
-sphinx>=7.0.1
-sphinx-rtd-theme>=1.2.2
+sphinx
+sphinx-rtd-theme
 
 # Optional Dependencies
 # Uncomment if needed
-# deepspeed>=0.9.0  # For distributed training
-# fairscale>=0.4.13  # For model sharding
-# flash-attn>=2.0.0  # For faster attention computation
+# deepspeed  # For distributed training
+# fairscale  # For model sharding
+# flash-attn  # For faster attention computation
