Add custom exceptions, inference utilities, and AWS configuration updates

--- a/configs/aws_configs/p3.2xlarge.yaml
+++ b/configs/aws_configs/p3.2xlarge.yaml
@@ -22,7 +22,7 @@ model:
 
 aws:
   region: "us-west-2"
-  s3_bucket: "your-model-bucket"
+  s3_bucket: "my-summarization-model-bucket "
   sagemaker_role_arn: "arn:aws:iam::your-account-id:role/service-role/AmazonSageMaker-ExecutionRole"
   cloudwatch:
     log_group: "/aws/summarization"
