--- a/configs/test_config.yaml
+++ b/configs/test_config.yaml
@@ -8,7 +8,7 @@ dataset:
   target_column: "highlights"
 
 model:
-  model_name: "mrm8488/bert-small2bert-small-finetuned-cnn_daily_mail-summarization"
+  model_name: "google-t5/t5-small"
   pretrained_model_name: "facebook/bart-large-cnn"
 
 training:
